tests/base/parser/bad/exps/exp_t-tfun-tid-arrow-with.scilexp
tfun 'A => [True] (* invalid expression *)
